# Softwareudvikling_PortefolgeOpgave

./: CMakeLists.txt  README.md
include/: Grotte.h  Kamp.h  Karakter.h  Monster.h  Spil.h
include/Status/: Cursed.h  Frozen.h  Paralyzed.h  Poisoned.h  Status.h  Stunned.h
include/Ting/: Blaeser.h  Bombe.h  Forbandelse.h  Gift.h  Ildbombe.h  Kolle.h  Ting.h  Tordenbombe.h
src/: Grotte.cpp  Kamp.cpp  Karakter.cpp  Monster.cpp  Spil.cpp  Status.cpp  Ting.cpp  main.cpp
src/Status/: Cursed.cpp  Frozen.cpp  Paralyzed.cpp  Poisoned.cpp  Status.cpp  Stunned.cpp
src/Ting/: Blaeser.cpp  Bombe.cpp  Forbandelse.cpp  Gift.cpp  Ildbombe.cpp  Kolle.cpp  Ting.cpp  Tordenbombe.cpp
